--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "bitcoin-core/secp256k1 working with react-native",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "grep -e url -e path .gitmodules | sed 's/.*= //' | while read path; do read url; git clone $url $path/.; done"
   },
   "repository": {
     "type": "git",
