--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.4)
 
 set(CMAKE_C_STANDARD 90)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 add_definitions(-DUSE_NUM_NONE=1)
 add_definitions(-DUSE_FIELD_INV_BUILTIN=1)
